# mrworldwide

./: .gitignore  README.md  com.github.elfenware.thumbtack.yml  io.github.elly_code.inscriptions.flathub.yml  io.github.elly_code.inscriptions.yml  io.github.elly_codes.inscriptions.flathub.yml  io.github.elly_codes.inscriptions.yml  io.github.teamcons.inscriptions.flathub.yml  io.github.teamcons.inscriptions.yml  io.github.teamcons.mrworldwide.flathub.yml  io.github.teamcons.mrworldwide.yml  meson.build  meson_options.txt
data/: Application.css  inscriptions.desktop.in  inscriptions.gresource.xml  inscriptions.gschema.xml  inscriptions.metainfo.xml.in  meson.build  mrworldwide.desktop.in  mrworldwide.gresource.xml  mrworldwide.gschema.xml  mrworldwide.metainfo.xml.in  thumbtack.desktop.in  thumbtack.gresource.xml  thumbtack.gschema.xml  thumbtack.metainfo.xml.in  {{PROJECT_NAME}}.metainfo.xml.in
po/: LINGUAS  POTFILES  README.md  bn.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fil.po  fr.po  hi.po  io.github.elly_code.inscriptions.pot  io.github.elly_codes.inscriptions.pot  io.github.teamcons.inscriptions.pot  io.github.teamcons.mrworldwide.pot  it.po  ja.po  lt.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
po/extra/: LINGUAS  POTFILES  bn.po  cs.po  da.po  de.po  el.po  es.po  extra.pot  fi.po  fil.po  fr.po  hi.po  it.po  ja.po  lt.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
src/: Application.vala  Constants.vala  LangList.vala  MainWindow.vala
src/Backend/: BackendTemplate.vala  DeepL.vala
src/Enums/: Formality.vala  StatusCode.vala
src/Objects/: DDModel.vala  Lang.vala
src/Services/: DeepL.vala  Deepl.vala  Jason.vala  Secrets.vala
src/Views/: ErrorScreen.vala  ErrorView.vala  LogView.vala  NoInternetView.vala  TranslationView.vala  WelcomeView.vala
src/Widgets/: ApiEntry.vala  ApiLevel.vala  ContextPopover.vala  ErrorBonusBox.vala  Menu.vala  OptionsMenu.vala  OptionsPopover.vala  OrientationBox.vala  Pane.vala  RetryButton.vala  SendCodeButton.vala  SettingsPopover.vala  ShowLangs.vala  SourcePane.vala  TargetPane.vala
src/Windows/: MainWindow.vala  Window.vala
